Trying to fix some layout issues

--- a/src/playground/interface.css
+++ b/src/playground/interface.css
@@ -11,18 +11,20 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
 }
-.center {
+
+.editor .center {
     height: 100%;
 }
 
-.stage-only {
+.player-only {
     padding-bottom: 16px;
 }
-.stage-only * {
+.player-only * {
     box-sizing: border-box;
 }
-.stage-only .center {
+.player-only .center {
     /* there's a couple extra pixels of border around the stage */
     width: 482px;
     margin: auto;
@@ -43,10 +45,10 @@ a {
     body {
         background-color: #111;
     }
-    .stage-only {
+    .player-only {
         color: #ddd;
     }
-    .stage-only a {
+    .player-only a {
         color: #4af;
     }
 }
